<resources>
    <string name="app_name">Bookstay</string>
    <string name="book_stay">ookstay</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- activity_booking_detail -->
    <string name="booking_details">Booking Details</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="number_of_persons">Number of Persons:</string>
    <string name="number_of_children">Number of Children:</string>

    <string name="select_payment_method">Select Payment Method</string>
    <string name="pay_at_hotel">Pay at Hotel</string>
    <string name="card_payment">Card Payment</string>

    <string name="book_now">Book Now</string>

    <!-- activity_sign_in  -->
    <string name="login">Login</string>
    <string name="hint_email_iD">Email ID</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="create_new_account">Create new account</string>

    <!-- actitity_sign_up -->
    <string name="register">Register</string>
    <string name="reEnter_password">Re-Enter Password</string>
    <string name="sign_up_policy">By signing up, you agree to our Terms of Service and Privacy Policy.</string>

    <string name="join_us_before">Join us before?</string>

    <!-- fragment_booking  -->
    <string name="my_trips">My Trips</string>
    <string name="active_bookings">Active Bookings</string>
    <string name="history_bookings">History Bookings</string>

    <!-- fragment_home-->
    <string name="hi_there">Hi there!</string>
    <string name="where_do_you_want">Where do you want</string>
    <string name="to_go">to go?</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>

    <string name="done">Done</string>
    <string name="search">Search</string>

    <string name="outstanding_room">Outstanding Room</string>
    <string name="view_all">View All</string>

    <string name="promotional_information">Promotional Information</string>

    <!-- fragment_saved_place  -->
    <string name="saved">Saved</string>

    <!-- fragment _user_profile   -->
    <string name="user_profile">User Profile</string>
    <string name="join_with_us">Join with us, </string>
    <string name="login_or_register">Login / Register</string>
    <string name="sign_out">Sign Out</string>

    <!-- item_booking_place  -->
    <string name="complete">Complete</string>


    <!-- fragment_change_language  -->
    <string name="lang_eng">English</string>
    <string name="lang_vi">Vietnamese</string>


    <!-- item fro User_profile_fragment -->
    <string name="account_information">Account Information</string>
    <string name="payment">Payment</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="get_help">Get Help</string>
    <string name="send_us_feedback">Send us feedback</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="promotions_information">Promotions Information</string>
    <string name="search_destinations">Search Destinations</string>
    <string name="bookings">Bookings</string>
    <string name="home">Home</string>
    <string name="booking_menu">Booking</string>
    <string name="all_hotels_found">All Hotels Found</string>
    <string name="night">/night</string>
    <string name="description">Description</string>
    <string name="facilities">Facilities</string>
    <string name="room_type_deluxe">Room Type: Deluxe</string>
    <string name="booking_information">Booking Information</string>
    <string name="cancel_booking">Cancel booking</string>
    <string name="adult">Adult:</string>
    <string name="child">Child:</string>
    <string name="date">Date:</string>
    <string name="payment_method">Payment method:</string>
    <string name="payment_status">Payment status:</string>
    <string name="booking_is_canceled">Booking is canceled</string>
    <string name="checked_in">Checked-in</string>
    <string name="checked_out">Checked-out</string>
    <string name="on_going">On Going</string>
    <string name="canceled">Canceled</string>
    <string name="paid">Paid</string>
    <string name="not_paid">Not Paid</string>
    <string name="person_of_card">Person of Card</string>
    <string name="card_number">Card Number</string>

</resources>